--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
+    "server": "json-server --watch server/db.json --port 5000 --routes server/routes.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rui Cheng <rui.cheng@infotrack.com.au> (www.infotrack.com.au)",
@@ -12,6 +13,7 @@
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
@@ -24,6 +26,7 @@
     "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "json-server": "^0.8.19",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.5.1",
     "url-loader": "^0.5.7",
