--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "redux-saga": "^0.12.0",
+    "redux-thunk": "^2.1.0",
     "spin.js": "^2.3.2"
   }
 }
